<resources>
    <string name="app_name">assignment3</string>
    <string name="myName">Vincent Logozzo</string>
    <string name="addTeam">add team</string>
    <string name="exit">exit</string>
    <string name="city">city</string>
    <string name="name">name</string>
    <string name="sport">sport</string>
    <string name="mvp">mvp</string>
    <string name="stadium">stadium</string>
    <string name="submit">submit</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
