<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0sp"
            android:text="@string/city"
            android:textSize="30.0sp" />

        <EditText
            android:id="@+id/cityField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="30.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0sp"
            android:text="@string/name"
            android:textSize="30.0sp" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="30.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0sp"
            android:text="@string/sport"
            android:textSize="30.0sp" />

        <EditText
            android:id="@+id/sportField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sport"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="30.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0sp"
            android:text="@string/mvp"
            android:textSize="30.0sp" />

        <EditText
            android:id="@+id/mvpField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mvp"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="30.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0sp"
            android:text="@string/stadium"
            android:textSize="30.0sp" />

        <EditText
            android:id="@+id/stadiumField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/stadium"
            android:inputType="text"
            android:maxLength="10"
            android:textSize="30.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/holo_purple"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitButton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#ff000000"
            android:textSize="25.0sp" />

        <Button
            android:id="@+id/exitButton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="#ff000000"
            android:textSize="25.0sp" />
    </LinearLayout>
</LinearLayout>